--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>App Component</h1>
+<mat-toolbar>
+    <span>Crud App</span>
+    <span class="example-spacer"></span>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
